--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="handler"
+            type="com.metron.coin.base.BindClickListener" />
+
+        <import type="android.view.View" />
+
+        <variable
+            name="visiable"
+            type="boolean" />
+    </data>
+
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,6 +28,41 @@
             android:background="@drawable/ic_welcome_logo"
             android:clickable="true"
             android:onClick="testApi" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/login"
+            style="@style/CardViewClick"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_above="@+id/regist"
+            android:layout_marginLeft="48dp"
+            android:layout_marginRight="48dp"
+            android:background="@drawable/bg_white_stoke"
+            android:gravity="center"
+            android:onClick="@{handler.click}"
+            android:text="登  录"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:visibility="@{visiable ? View.VISIBLE : View.INVISIBLE}" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/regist"
+            style="@style/CardViewClick"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="48dp"
+            android:layout_marginBottom="62dp"
+            android:background="@drawable/bg_white_stoke"
+            android:gravity="center"
+            android:onClick="@{handler.click}"
+            android:text="注  册"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:visibility="@{visiable ? View.VISIBLE : View.INVISIBLE}" />
 
     </RelativeLayout>
 </layout>
