--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:emptyView="@layout/layout_no_data"
-            app:viewHolderClass="com.metron.coin.adapter.OrderAdapter"
+            app:viewHolderClass="com.metron.xiaoming.adapter.OrderAdapter"
             app:viewHolderLayout="@layout/item_order" />
 
     </LinearLayout>
