--- a/app/src/main/res/layout/fragment_extract_coin.xml
+++ b/app/src/main/res/layout/fragment_extract_coin.xml
@@ -311,7 +311,7 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/line"
                 app:emptyView="@layout/layout_no_data"
-                app:viewHolderClass="com.metron.coin.adapter.WithdrawListAdapter"
+                app:viewHolderClass="com.metron.xiaoming.adapter.WithdrawListAdapter"
                 app:viewHolderLayout="@layout/item_withdraw" />
 
             <View
