--- a/app/src/main/res/layout/fragment_minter_btc.xml
+++ b/app/src/main/res/layout/fragment_minter_btc.xml
@@ -424,7 +424,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     app:emptyView="@layout/layout_no_data"
-                    app:viewHolderClass="com.metron.coin.adapter.MinterListAdapter"
+                    app:viewHolderClass="com.metron.xiaoming.adapter.MinterListAdapter"
                     app:viewHolderLayout="@layout/item_minter" />
 
             </LinearLayout>
