--- a/app/src/main/res/layout/fragment_profit_btc.xml
+++ b/app/src/main/res/layout/fragment_profit_btc.xml
@@ -340,7 +340,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:emptyView="@layout/layout_no_data"
-                app:viewHolderClass="com.metron.coin.adapter.IncomeAdapter"
+                app:viewHolderClass="com.metron.xiaoming.adapter.IncomeAdapter"
                 app:viewHolderLayout="@layout/item_income" />
 
         </LinearLayout>
