--- a/app/src/main/res/layout/item_minter_series.xml
+++ b/app/src/main/res/layout/item_minter_series.xml
@@ -18,6 +18,7 @@
     </data>
 
     <RelativeLayout
+        style="@style/ClickableStyle"
         android:layout_width="match_parent"
         android:layout_height="86dp"
         android:paddingLeft="16dp"
@@ -40,7 +41,7 @@
             android:layout_alignTop="@+id/icon"
             android:layout_marginLeft="14dp"
             android:layout_toRightOf="@+id/icon"
-            android:text="@{minter.name}"
+            android:text="@{@string/mode_name_is(minter.name)}"
             android:textColor="#15233E"
             android:textSize="14sp"
             tools:text="小铭 S1" />
