--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -306,6 +306,7 @@
                     app:tabRippleColor="#06000000" />
 
                 <LinearLayout
+                    android:paddingTop="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/white"
@@ -314,7 +315,8 @@
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="16dp">
+                        android:paddingLeft="16dp"
+                        android:paddingRight="16dp">
 
                         <View
                             android:id="@+id/greenDot"
